# frappe_base_app

./: README.md  package.json  pyproject.toml
custom_app/: hooks.py
custom_app/doctype/app_settings/: app_settings.json  app_settings.py
custom_app/public/frontend/: index.html
custom_app/public/frontend/assets/: Assessments-ad34788e.js  Assessments-ad34788e.js.map  Certificates-f169ecf7.js  Course-48ff1ee1.js  Course-48ff1ee1.js.map  Courses-8a86bcfe.js  FontColor-09583e4f.js  InsertImage-37c6f226.js  InsertLink-7da960a5.js  InsertLink-7da960a5.js.map  InsertVideo-fcc00b00.js  Instructor-b00ddaa7.js.map  Instructors-b4e3d83b.js  Instructors-b4e3d83b.js.map  LayoutHeader-16d9e812.js.map  Login-b4a656bf.js  Login-b4a656bf.js.map  Program-080340cb.js.map  Programs-65cf94c9.js  Students-f6511c7e.js.map  Templates-fe4322c2.js.map  index-1f5f3a1b.js  index-8f989dda.css
custom_app/www/: portal.html  portal.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  router.js
frontend/src/components/: Breadcrumbs.vue  UserDropdown.vue
frontend/src/components/Layouts/: AppSidebar.vue
frontend/src/pages/: Assessments.vue  Certificate.vue  Certificates.vue  Course.vue  Courses.vue  Instructor.vue  Instructors.vue  Program.vue  Programs.vue  Reports.vue  Student.vue  Students.vue  Templates.vue
professional_certificate_creation_tool/: hooks.py  modules.txt
professional_certificate_creation_tool/public/frontend/assets/: Certificate-a7fd4386.js  Courses-8a86bcfe.js.map  (+15 more)
professional_certificate_creation_tool/www/: education.py
